added readme gen

--- a/hexocd.env
+++ b/hexocd.env
@@ -1,5 +1,8 @@
 # shellcheck disable=SC2034 # Will be sourced by confsubst
 
+XFG=#FFFDFF
+XBG=#111122
+
 CY1=#BB6688
 C09=#CC5577
 C01=#DD4466
@@ -30,16 +33,15 @@ C14=#66DDDD
 C06=#44CCEE
 CX6=#11AAFF
 
-CY7=#AACCEE
-C15=#99DDCC
+CY7=#BBDDFF
+C15=#AACCFF
 C07=#667788
 CX7=#334455
 
-CY0=#778899
+CY0=#556688
 C08=#445566
 C00=#222233
 CX0=#111122
 
-# ___=#88AABB
 
 # vim: ft=sh
