--- a/hexocd.env
+++ b/hexocd.env
@@ -1,46 +1,103 @@
 # shellcheck disable=SC2034 # Will be sourced by confsubst
 
-XFG=#FFFDFF
+#▁▁▁{F,B}G
+#━━━━━━━━━━┓
+XFG=#BBDDFF
 XBG=#111122
+#━━━━━━━━━━┛
 
-CY1=#BB6688
-C09=#CC5577
-C01=#DD4466
-CX1=#EE1144
-
+#▁▁▁8▁4x▁32
+#━━━━━━━━━━┓
+CY1=#BB5588
+C09=#CC4477
+C01=#DD3366
+CX1=#EE2255
+#╺╸╺╸╺╸╺╸╺╸
 CY2=#77DD55
 C10=#55CC44
 C02=#33BB33
 CX2=#11AA22
-
+#╺╸╺╸╺╸╺╸╺╸
 CY3=#CCEE66
 C11=#DDDD44
 C03=#EECC22
 CX3=#FFBB00
-
+#╺╸╺╸╺╸╺╸╺╸
 CY4=#88BBCC
 C12=#77AADD
 C04=#1188EE
 CX4=#2266FF
-
+#╺╸╺╸╺╸╺╸╺╸
 CY5=#77AADD
 C13=#6688CC
 C05=#5566EE
 CX5=#6655FF
-
+#╺╸╺╸╺╸╺╸╺╸
 CY6=#88EECC
 C14=#66DDDD
 C06=#44CCEE
 CX6=#11AAFF
-
+#╺╸╺╸╺╸╺╸╺╸
 CY7=#BBDDFF
 C15=#AACCFF
 C07=#667788
 CX7=#334455
-
+#╺╸╺╸╺╸╺╸╺╸
 CY0=#556688
 C08=#445566
 C00=#222233
 CX0=#111122
+#━━━━━━━━━━┛
+
+#▁▁▁SEED▁S
+#━━━━━━━━━━┓
+SBG=#EE2255
+SFG=#000000
+#╺╸╺╸╺╸╺╸╺╸
+SK0=#110000
+SK1=#220011
+SK2=#330022
+SK3=#441133
+SK4=#552244
+SK5=#663355
+SK6=#774466
+SK7=#885577
+SK8=#996688
+SK9=#AA7799
+#━━━━━━━━━━┛
+
+#▁▁▁SEED▁W
+#━━━━━━━━━━┓
+WBG=#3311FF
+WFG=#FFFFFF
+#╺╸╺╸╺╸╺╸╺╸
+WK0=#000011
+WK1=#001122
+WK2=#002233
+WK3=#113344
+WK4=#224455
+WK5=#335566
+WK6=#446677
+WK7=#557788
+WK8=#668899
+WK9=#7799AA
+#━━━━━━━━━━┛
+
+#▁▁▁SEED▁E
+#━━━━━━━━━━┓
+EBG=#11AA22
+EFG=#000000
+#╺╸╺╸╺╸╺╸╺╸
+EK0=#001100
+EK1=#002211
+EK2=#003322
+EK3=#114433
+EK4=#225544
+EK5=#336655
+EK6=#447766
+EK7=#558877
+EK8=#669988
+EK9=#77AA99
+#━━━━━━━━━━┛
 
 # vim: ft=sh
