--- a/hexocd.env
+++ b/hexocd.env
@@ -8,45 +8,45 @@ XBG=#111122
 
 #▁▁▁8▁4x▁32
 #━━━━━━━━━━┓
-CY1=#BB5588
-C09=#CC4477
-C01=#DD3366
+CY1=#BB8888
+C09=#CC6677
+C01=#DD4466
 CX1=#EE2255
 #╺╸╺╸╺╸╺╸╺╸
-CY2=#77DD55
-C10=#55CC44
+CY2=#55DD77
+C10=#44CC55
 C02=#33BB33
-CX2=#11AA22
+CX2=#22AA11
 #╺╸╺╸╺╸╺╸╺╸
-CY3=#CCEE66
-C11=#DDDD44
-C03=#EECC22
-CX3=#FFBB00
+CY3=#DDEE88
+C11=#CCDD66
+C03=#BBCC44
+CX3=#AABB22
 #╺╸╺╸╺╸╺╸╺╸
-CY4=#88BBCC
-C12=#77AADD
-C04=#1188EE
-CX4=#2266FF
+CY4=#66AAFF
+C12=#5588EE
+C04=#4466DD
+CX4=#3344CC
 #╺╸╺╸╺╸╺╸╺╸
-CY5=#77AADD
-C13=#6688CC
-C05=#5566EE
-CX5=#6655FF
+CY5=#88AADD
+C13=#7788CC
+C05=#6666EE
+CX5=#5544FF
 #╺╸╺╸╺╸╺╸╺╸
-CY6=#88EECC
-C14=#66DDDD
-C06=#44CCEE
-CX6=#11AAFF
+CY6=#66FFDD
+C14=#55DDCC
+C06=#44BBBB
+CX6=#3399AA
 #╺╸╺╸╺╸╺╸╺╸
 CY7=#BBDDFF
 C15=#AACCFF
 C07=#667788
 CX7=#334455
 #╺╸╺╸╺╸╺╸╺╸
-CY0=#556688
-C08=#445566
-C00=#222233
-CX0=#111122
+CY0=#445588
+C08=#334466
+C00=#223344
+CX0=#112222
 #━━━━━━━━━━┛
 
 #▁▁▁SEED▁S
@@ -68,7 +68,7 @@ SK9=#BB7799
 
 #▁▁▁SEED▁W
 #━━━━━━━━━━┓
-WBG=#3311FF
+WBG=#3344CC
 WFG=#FFFFFF
 #╺╸╺╸╺╸╺╸╺╸
 WK0=#000022
@@ -85,7 +85,7 @@ WK9=#7799BB
 
 #▁▁▁SEED▁E
 #━━━━━━━━━━┓
-EBG=#11AA22
+EBG=#22AA11
 EFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
 EK0=#002200
