--- a/themes/kitty-color.conf
+++ b/themes/kitty-color.conf
@@ -3,34 +3,34 @@
 background           #111122
 foreground           #BBDDFF
 
-mark1_background     #DD3366
+mark1_background     #DD4466
 mark1_foreground     black
 mark2_background     #33BB33
 mark2_foreground     black
-mark3_background     #EECC22
+mark3_background     #BBCC44
 mark3_foreground     black
 
-bell_border_color    #DD3366
+bell_border_color    #DD4466
 
-selection_background #3311FF
+selection_background #3344CC
 selection_foreground #FFFFFF
 
 # cursor_text_color    #000000
-# cursor               #11AA22
+# cursor               #22AA11
 
-color0               #222233
-color1               #DD3366
+color0               #223344
+color1               #DD4466
 color2               #33BB33
-color3               #EECC22
-color4               #1188EE
-color5               #5566EE
-color6               #44CCEE
+color3               #BBCC44
+color4               #4466DD
+color5               #6666EE
+color6               #44BBBB
 color7               #667788
-color8               #445566
-color9               #CC4477
-color10              #55CC44
-color11              #DDDD44
-color12              #77AADD
-color13              #6688CC
-color14              #66DDDD
+color8               #334466
+color9               #CC6677
+color10              #44CC55
+color11              #CCDD66
+color12              #5588EE
+color13              #7788CC
+color14              #55DDCC
 color15              #AACCFF
