--- a/hexocd.env
+++ b/hexocd.env
@@ -3,40 +3,40 @@
 #▁▁▁{F,B}G
 #━━━━━━━━━━┓
 XFG=#BBDDFF
-XBG=#111122
+XBG=#001122
 #━━━━━━━━━━┛
 
 #▁▁▁8▁4x▁32
 #━━━━━━━━━━┓
-CY1=#BB8888
-C09=#CC6677
-C01=#DD4466
-CX1=#EE2255
+CY1=#CC8899
+C09=#DD6688
+C01=#EE4477
+CX1=#FF2266
 #╺╸╺╸╺╸╺╸╺╸
-CY2=#55DD77
-C10=#44CC55
-C02=#33BB33
-CX2=#22AA11
+CY2=#99EE88
+C10=#77DD66
+C02=#55CC44
+CX2=#33BB22
 #╺╸╺╸╺╸╺╸╺╸
-CY3=#DDEE88
-C11=#CCDD66
-C03=#BBCC44
-CX3=#AABB22
+CY3=#DDBB88
+C11=#CCCC66
+C03=#BBDD44
+CX3=#AAEE22
 #╺╸╺╸╺╸╺╸╺╸
-CY4=#66AAFF
-C12=#5588EE
-C04=#4466DD
-CX4=#3344CC
+CY4=#8899FF
+C12=#6677EE
+C04=#4455DD
+CX4=#2233CC
 #╺╸╺╸╺╸╺╸╺╸
-CY5=#88AADD
-C13=#7788CC
-C05=#6666EE
-CX5=#5544FF
+CY5=#BB99FF
+C13=#9966EE
+C05=#7733DD
+CX5=#5500CC
 #╺╸╺╸╺╸╺╸╺╸
-CY6=#66FFDD
-C14=#55DDCC
-C06=#44BBBB
-CX6=#3399AA
+CY6=#88CCDD
+C14=#66DDCC
+C06=#44EEBB
+CX6=#22FFAA
 #╺╸╺╸╺╸╺╸╺╸
 CY7=#BBDDFF
 C15=#AACCFF
@@ -51,7 +51,7 @@ CX0=#112222
 
 #▁▁▁SEED▁S
 #━━━━━━━━━━┓
-SBG=#EE2255
+SBG=#FF2266
 SFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
 SK0=#220000
@@ -68,7 +68,7 @@ SK9=#BB7799
 
 #▁▁▁SEED▁W
 #━━━━━━━━━━┓
-WBG=#3344CC
+WBG=#2233CC
 WFG=#FFFFFF
 #╺╸╺╸╺╸╺╸╺╸
 WK0=#000022
@@ -85,7 +85,7 @@ WK9=#7799BB
 
 #▁▁▁SEED▁E
 #━━━━━━━━━━┓
-EBG=#22AA11
+EBG=#33BB22
 EFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
 EK0=#002200
