--- a/hexocd.env
+++ b/hexocd.env
@@ -38,15 +38,15 @@ C14=#66DDCC
 C06=#44EEBB
 CX6=#22FFAA
 #╺╸╺╸╺╸╺╸╺╸
-CY7=#BBDDFF
-C15=#AACCFF
-C07=#667788
-CX7=#334455
+CY7=#99AACC
+C15=#7788AA
+C07=#556688
+CX7=#334466
 #╺╸╺╸╺╸╺╸╺╸
-CY0=#445588
-C08=#334466
+CY0=#445566
+C08=#334455
 C00=#223344
-CX0=#112222
+CX0=#112233
 #━━━━━━━━━━┛
 
 #▁▁▁SEED▁S
