--- a/themes/kitty-color.conf
+++ b/themes/kitty-color.conf
@@ -1,36 +1,36 @@
 # mxc: path=/home/meta/.config/kitty/kittheme.conf
 
-background           #111122
+background           #001122
 foreground           #BBDDFF
 
-mark1_background     #DD4466
+mark1_background     #EE4477
 mark1_foreground     black
-mark2_background     #33BB33
+mark2_background     #55CC44
 mark2_foreground     black
-mark3_background     #BBCC44
+mark3_background     #BBDD44
 mark3_foreground     black
 
-bell_border_color    #DD4466
+bell_border_color    #EE4477
 
-selection_background #3344CC
+selection_background #2233CC
 selection_foreground #FFFFFF
 
 # cursor_text_color    #000000
-# cursor               #22AA11
+# cursor               #33BB22
 
 color0               #223344
-color1               #DD4466
-color2               #33BB33
-color3               #BBCC44
-color4               #4466DD
-color5               #6666EE
-color6               #44BBBB
-color7               #667788
-color8               #334466
-color9               #CC6677
-color10              #44CC55
-color11              #CCDD66
-color12              #5588EE
-color13              #7788CC
-color14              #55DDCC
-color15              #AACCFF
+color1               #EE4477
+color2               #55CC44
+color3               #BBDD44
+color4               #4455DD
+color5               #7733DD
+color6               #44EEBB
+color7               #556688
+color8               #334455
+color9               #DD6688
+color10              #77DD66
+color11              #CCCC66
+color12              #6677EE
+color13              #9966EE
+color14              #66DDCC
+color15              #7788AA
