--- a/hexocd.env
+++ b/hexocd.env
@@ -2,102 +2,110 @@
 
 #▁▁▁{F,B}G
 #━━━━━━━━━━┓
-XFG=#BBDDFF
-XBG=#001122
+XFG=#AA99FF
+XBG=#0F122F
 #━━━━━━━━━━┛
 
 #▁▁▁8▁4x▁32
 #━━━━━━━━━━┓
-CY1=#CC8899
-C09=#DD6688
-C01=#EE4477
-CX1=#FF2266
+CY1=#BB8899
+C09=#CC6688
+C01=#DD4477
+CC1=#EE2266
+CX1=#FF1155
 #╺╸╺╸╺╸╺╸╺╸
 CY2=#99EE88
 C10=#77DD66
 C02=#55CC44
-CX2=#33BB22
+CC2=#33BB22
+CX2=#11AA00
 #╺╸╺╸╺╸╺╸╺╸
-CY3=#DDBB88
-C11=#CCCC66
-C03=#BBDD44
-CX3=#AAEE22
+CY3=#BB9988
+C11=#CC7766
+C03=#DD5544
+CX3=#EE3322
+CC3=#FF9900
 #╺╸╺╸╺╸╺╸╺╸
-CY4=#8899FF
-C12=#6677EE
-C04=#4455DD
-CX4=#2233CC
+CY4=#99BBDD
+C12=#66AACC
+C04=#3399DD
+CC4=#1177EE
+CX4=#3311FF
 #╺╸╺╸╺╸╺╸╺╸
-CY5=#BB99FF
-C13=#9966EE
-C05=#7733DD
-CX5=#5500CC
+CY5=#CC99FF
+C13=#AA77EE
+C05=#8855DD
+CC5=#6633CC
+CX5=#4411BB
 #╺╸╺╸╺╸╺╸╺╸
-CY6=#88CCDD
-C14=#66DDCC
-C06=#44EEBB
-CX6=#22FFAA
+CY6=#88FFDD
+C14=#66EECC
+C06=#44DDBB
+CC6=#22CCAA
+CX6=#00BB99
 #╺╸╺╸╺╸╺╸╺╸
-CY7=#99AACC
-C15=#7788AA
-C07=#556688
+CY7=#BBCCEE
+C15=#99AACC
+C07=#7788AA
+CC7=#556688
 CX7=#334466
 #╺╸╺╸╺╸╺╸╺╸
-CY0=#445566
-C08=#334455
-C00=#223344
-CX0=#112233
+CY0=#557799
+C08=#445577
+C00=#223355
+CC0=#111133
+CX0=#000011
 #━━━━━━━━━━┛
 
 #▁▁▁SEED▁S
 #━━━━━━━━━━┓
-SBG=#FF2266
+SBG=#FF1155
 SFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
-SK0=#220000
-SK1=#330011
-SK2=#440022
-SK3=#551133
-SK4=#662244
-SK5=#773355
-SK6=#884466
-SK7=#995577
-SK8=#AA6688
-SK9=#BB7799
+SK0=#110000
+SK1=#EE0011
+SK2=#EE1133
+SK3=#DD2244
+SK4=#EE3355
+SK5=#DD4466
+SK6=#CC5577
+SK7=#DD6688
+SK8=#EE7799
+SK9=#FF88AA
 #━━━━━━━━━━┛
 
 #▁▁▁SEED▁W
 #━━━━━━━━━━┓
-WBG=#2233CC
+WBG=#3311FF
 WFG=#FFFFFF
 #╺╸╺╸╺╸╺╸╺╸
-WK0=#000022
-WK1=#001133
-WK2=#002244
-WK3=#113355
-WK4=#224466
-WK5=#335577
-WK6=#446688
-WK7=#557799
-WK8=#6688AA
-WK9=#7799BB
+WK0=#000033
+WK1=#001144
+WK2=#112255
+WK3=#223366
+WK4=#334477
+WK5=#445588
+WK6=#556699
+WK7=#6677AA
+WK8=#7788BB
+WK9=#8899CC
 #━━━━━━━━━━┛
 
 #▁▁▁SEED▁E
 #━━━━━━━━━━┓
-EBG=#33BB22
+EBG=#11AA00
 EFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
-EK0=#002200
-EK1=#003311
-EK2=#004422
-EK3=#115533
-EK4=#226644
-EK5=#337755
-EK6=#448866
-EK7=#559977
-EK8=#66AA88
-EK9=#77BB99
+EK0=#001122
+EK1=#002233
+EK2=#113344
+EK3=#224455
+EK4=#335566
+EK5=#446677
+EK6=#557788
+EK7=#668899
+EK8=#7799AA
+EK9=#88AABB
 #━━━━━━━━━━┛
 
-# vim: ft=sh
+# vi: ft=sh
