--- a/hexocd.env
+++ b/hexocd.env
@@ -23,8 +23,8 @@ CX2=#11AA00
 CY3=#BB9988
 C11=#CC7766
 C03=#DD5544
-CX3=#EE3322
 CC3=#FF9900
+CX3=#EE3322
 #╺╸╺╸╺╸╺╸╺╸
 CY4=#99BBDD
 C12=#66AACC
@@ -62,9 +62,9 @@ CX0=#000011
 SBG=#FF1155
 SFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
-SK0=#110000
+SK0=#FF0000
 SK1=#EE0011
-SK2=#EE1133
+SK2=#DD1133
 SK3=#DD2244
 SK4=#EE3355
 SK5=#DD4466
@@ -77,18 +77,18 @@ SK9=#FF88AA
 #▁▁▁SEED▁W
 #━━━━━━━━━━┓
 WBG=#3311FF
-WFG=#FFFFFF
+WFG=#CCBBFF
 #╺╸╺╸╺╸╺╸╺╸
-WK0=#000033
-WK1=#001144
-WK2=#112255
-WK3=#223366
-WK4=#334477
-WK5=#445588
-WK6=#556699
-WK7=#6677AA
-WK8=#7788BB
-WK9=#8899CC
+WK0=#000044
+WK1=#110066
+WK2=#221188
+WK3=#4422AA
+WK4=#6633CC
+WK5=#8855DD
+WK6=#9966EE
+WK7=#AA77EE
+WK8=#BB88FF
+WK9=#CC99FF
 #━━━━━━━━━━┛
 
 #▁▁▁SEED▁E
@@ -96,16 +96,17 @@ WK9=#8899CC
 EBG=#11AA00
 EFG=#000000
 #╺╸╺╸╺╸╺╸╺╸
-EK0=#001122
-EK1=#002233
-EK2=#113344
-EK3=#224455
-EK4=#335566
-EK5=#446677
-EK6=#557788
-EK7=#668899
-EK8=#7799AA
-EK9=#88AABB
+EK0=#119900
+EK1=#22AA00
+EK2=#33BB11
+EK3=#44CC22
+EK4=#55DD33
+EK5=#66DD44
+EK6=#77EE55
+EK7=#88EE66
+EK8=#99FF77
+EK9=#AAFF88
 #━━━━━━━━━━┛
+
 
 # vi: ft=sh
