--- a/hexocd.env
+++ b/hexocd.env
@@ -1,67 +1,71 @@
-# shellcheck disable=SC2034 # Will be sourced by confsubst
+#  shellcheck disable=SC2034 # Will be sourced by confsubst
 
-#▁▁▁{F,B}G
-#━━━━━━━━━━┓
+# ▁▁▁{F,B}G
+# ━━━━━━━━━━┓
 XFG=#AA99FF
 XBG=#0F122F
-#━━━━━━━━━━┛
+XGG=#0E102A
+# ━━━━━━━━━━┛
 
-#▁▁▁8▁4x▁32
-#━━━━━━━━━━┓
+# ▁▁▁8▁4x▁32
+# ━━━━━━━━━━┓
 CY1=#BB8899
 C09=#CC6688
 C01=#DD4477
 CC1=#EE2266
 CX1=#FF1155
-#╺╸╺╸╺╸╺╸╺╸
+
+# 1=#DD55AA
+# 1=#CC4488
+# ╺╸╺╸╺╸╺╸╺╸
 CY2=#99EE88
 C10=#77DD66
 C02=#55CC44
 CC2=#33BB22
-CX2=#11AA00
-#╺╸╺╸╺╸╺╸╺╸
+CX2=#11AA11
+# ╺╸╺╸╺╸╺╸╺╸
 CY3=#BB9988
 C11=#CC7766
 C03=#DD5544
 CC3=#FF9900
 CX3=#EE3322
-#╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺╸
 CY4=#99BBDD
 C12=#66AACC
 C04=#3399DD
 CC4=#1177EE
 CX4=#3311FF
-#╺╸╺╸╺╸╺╸╺╸
-CY5=#CC99FF
-C13=#AA77EE
-C05=#8855DD
-CC5=#6633CC
+# ╺╸╺╸╺╸╺╸╺╸
+CY5=#8899FF
+C13=#7777EE
+C05=#6666DD
+CC5=#5533CC
 CX5=#4411BB
-#╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺╸
 CY6=#88FFDD
 C14=#66EECC
 C06=#44DDBB
 CC6=#22CCAA
 CX6=#00BB99
-#╺╸╺╸╺╸╺╸╺╸
-CY7=#BBCCEE
-C15=#99AACC
-C07=#7788AA
-CC7=#556688
-CX7=#334466
-#╺╸╺╸╺╸╺╸╺╸
-CY0=#557799
-C08=#445577
-C00=#223355
-CC0=#111133
-CX0=#000011
-#━━━━━━━━━━┛
+# ╺╸╺╸╺╸╺╸╺╸
+CY7=#99AADD
+C15=#8899CC
+C07=#7788BB
+CC7=#6677AA
+CX7=#556699
+# ╺╸╺╸╺╸╺╸╺╸
+CY0=#445588
+C08=#334477
+C00=#223366
+CC0=#112255
+CX0=#001144
+# ━━━━━━━━━━┛
 
-#▁▁▁SEED▁S
-#━━━━━━━━━━┓
+# ▁▁▁SEED▁S
+# ━━━━━━━━━━┓
 SBG=#FF1155
 SFG=#000000
-#╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺╸
 SK0=#FF0000
 SK1=#EE0011
 SK2=#DD1133
@@ -72,30 +76,30 @@ SK6=#CC5577
 SK7=#DD6688
 SK8=#EE7799
 SK9=#FF88AA
-#━━━━━━━━━━┛
+# ━━━━━━━━━━┛
 
-#▁▁▁SEED▁W
-#━━━━━━━━━━┓
+# ▁▁▁SEED▁W
+# ━━━━━━━━━━┓
 WBG=#3311FF
 WFG=#CCBBFF
-#╺╸╺╸╺╸╺╸╺╸
-WK0=#000044
-WK1=#110066
-WK2=#221188
-WK3=#4422AA
-WK4=#6633CC
+# ╺╸╺╸╺╸╺╸╺╸
+WK0=#000022
+WK1=#111144
+WK2=#221177
+WK3=#442299
+WK4=#6644CC
 WK5=#8855DD
 WK6=#9966EE
 WK7=#AA77EE
 WK8=#BB88FF
 WK9=#CC99FF
-#━━━━━━━━━━┛
+# ━━━━━━━━━━┛
 
-#▁▁▁SEED▁E
-#━━━━━━━━━━┓
+# ▁▁▁SEED▁E
+# ━━━━━━━━━━┓
 EBG=#11AA00
 EFG=#000000
-#╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺╸
 EK0=#119900
 EK1=#22AA00
 EK2=#33BB11
@@ -106,7 +110,6 @@ EK6=#77EE55
 EK7=#88EE66
 EK8=#99FF77
 EK9=#AAFF88
-#━━━━━━━━━━┛
-
+# ━━━━━━━━━━┛
 
 # vi: ft=sh
