--- a/hexocd.env
+++ b/hexocd.env
@@ -9,56 +9,61 @@ XGG=#0E102A
 
 # ▁▁▁8▁4x▁32
 # ━━━━━━━━━━┓
-CY1=#BB8899
-C09=#CC6688
-C01=#DD4477
-CC1=#EE2266
-CX1=#FF1155
-
-# 1=#DD55AA
-# 1=#CC4488
+CY1=#AA66AA
+C09=#BB5599
+C01=#CC4488
+CC1=#DD3377
+CX1=#EE2266
+CZ1=#FF1155
 # ╺╸╺╸╺╸╺╸╺╸
 CY2=#99EE88
 C10=#77DD66
 C02=#55CC44
 CC2=#33BB22
 CX2=#11AA11
+CZ2=#009900
 # ╺╸╺╸╺╸╺╸╺╸
-CY3=#BB9988
-C11=#CC7766
-C03=#DD5544
-CC3=#FF9900
-CX3=#EE3322
+CY3=#FFBB88
+C11=#FFAA66
+C03=#EE9944
+CC3=#EE7722
+CX3=#DD5511
+CZ3=#DD3300
 # ╺╸╺╸╺╸╺╸╺╸
-CY4=#99BBDD
-C12=#66AACC
-C04=#3399DD
+CY4=#99DDDD
+C12=#66BBDD
+C04=#3399EE
 CC4=#1177EE
 CX4=#3311FF
+CZ4=#2211FE
 # ╺╸╺╸╺╸╺╸╺╸
 CY5=#8899FF
 C13=#7777EE
 C05=#6666DD
 CC5=#5533CC
-CX5=#4411BB
+CX5=#4422BB
+CZ5=#3311AA
 # ╺╸╺╸╺╸╺╸╺╸
 CY6=#88FFDD
 C14=#66EECC
 C06=#44DDBB
 CC6=#22CCAA
-CX6=#00BB99
+CX6=#11BB99
+CZ6=#00AA88
 # ╺╸╺╸╺╸╺╸╺╸
-CY7=#99AADD
-C15=#8899CC
-C07=#7788BB
+CY7=#99BBDD
+C15=#88AACC
+C07=#7799BB
 CC7=#6677AA
-CX7=#556699
+CX7=#555599
+CZ7=#443388
 # ╺╸╺╸╺╸╺╸╺╸
-CY0=#445588
-C08=#334477
-C00=#223366
-CC0=#112255
-CX0=#001144
+CY0=#4466AA
+C08=#335599
+C00=#224477
+CC0=#113355
+CX0=#112233
+CZ0=#001111
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁S
@@ -66,16 +71,16 @@ CX0=#001144
 SBG=#FF1155
 SFG=#000000
 # ╺╸╺╸╺╸╺╸╺╸
-SK0=#FF0000
-SK1=#EE0011
-SK2=#DD1133
-SK3=#DD2244
-SK4=#EE3355
-SK5=#DD4466
-SK6=#CC5577
-SK7=#DD6688
-SK8=#EE7799
-SK9=#FF88AA
+SK0=#FF0044
+SK1=#FF1155
+SK2=#EE2266
+SK3=#EE3377
+SK4=#EE4488
+SK5=#FF5599
+SK6=#FF66AA
+SK7=#FF77BB
+SK8=#FF88CC
+SK9=#FF99DD
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁W
@@ -85,8 +90,8 @@ WFG=#CCBBFF
 # ╺╸╺╸╺╸╺╸╺╸
 WK0=#000022
 WK1=#111144
-WK2=#221177
-WK3=#442299
+WK2=#222266
+WK3=#443399
 WK4=#6644CC
 WK5=#8855DD
 WK6=#9966EE
@@ -101,15 +106,15 @@ EBG=#11AA00
 EFG=#000000
 # ╺╸╺╸╺╸╺╸╺╸
 EK0=#119900
-EK1=#22AA00
-EK2=#33BB11
-EK3=#44CC22
-EK4=#55DD33
-EK5=#66DD44
-EK6=#77EE55
-EK7=#88EE66
-EK8=#99FF77
-EK9=#AAFF88
+EK1=#22AA11
+EK2=#33BB22
+EK3=#44CC33
+EK4=#55DD44
+EK5=#66DD55
+EK6=#77EE66
+EK7=#88EE77
+EK8=#99FF88
+EK9=#AAFF99
 # ━━━━━━━━━━┛
 
 # vi: ft=sh
