--- a/hexocd.env
+++ b/hexocd.env
@@ -9,40 +9,40 @@ XGG=#0E102A
 
 # ▁▁▁8▁4x▁32
 # ━━━━━━━━━━┓
-CY1=#AA66AA
-C09=#BB5599
-C01=#CC4488
-CC1=#DD3377
-CX1=#EE2266
-CZ1=#FF1155
+CY1=#AA5599
+C09=#BB4488
+C01=#CC3377
+CC1=#DD2266
+CX1=#EE1155
+CZ1=#FF0044
 # ╺╸╺╸╺╸╺╸╺╸
-CY2=#99EE88
-C10=#77DD66
-C02=#55CC44
-CC2=#33BB22
-CX2=#11AA11
-CZ2=#009900
+CY2=#99EEBB
+C10=#77DD99
+C02=#55CC77
+CC2=#33BB55
+CX2=#11AA33
+CZ2=#009911
 # ╺╸╺╸╺╸╺╸╺╸
-CY3=#FFBB88
-C11=#FFAA66
+CY3=#FFDD88
+C11=#FFBB66
 C03=#EE9944
 CC3=#EE7722
 CX3=#DD5511
 CZ3=#DD3300
 # ╺╸╺╸╺╸╺╸╺╸
-CY4=#99DDDD
-C12=#66BBDD
+CY4=#99DDFF
+C12=#66BBFF
 C04=#3399EE
 CC4=#1177EE
-CX4=#3311FF
-CZ4=#2211FE
+CX4=#3311CC
+CZ4=#2211AA
 # ╺╸╺╸╺╸╺╸╺╸
-CY5=#8899FF
-C13=#7777EE
-C05=#6666DD
-CC5=#5533CC
-CX5=#4422BB
-CZ5=#3311AA
+CY5=#9977FF
+C13=#8866EE
+C05=#7755DD
+CC5=#6644CC
+CX5=#5533BB
+CZ5=#4422AA
 # ╺╸╺╸╺╸╺╸╺╸
 CY6=#88FFDD
 C14=#66EECC
@@ -51,24 +51,24 @@ CC6=#22CCAA
 CX6=#11BB99
 CZ6=#00AA88
 # ╺╸╺╸╺╸╺╸╺╸
-CY7=#99BBDD
-C15=#88AACC
-C07=#7799BB
-CC7=#6677AA
-CX7=#555599
-CZ7=#443388
+CY7=#7777FF
+C15=#6666DD
+C07=#5555BB
+CC7=#444499
+CX7=#333377
+CZ7=#111155
 # ╺╸╺╸╺╸╺╸╺╸
-CY0=#4466AA
-C08=#335599
-C00=#224477
-CC0=#113355
-CX0=#112233
-CZ0=#001111
+CY0=#555588
+C08=#444477
+C00=#333366
+CC0=#222255
+CX0=#111144
+CZ0=#000033
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁S
 # ━━━━━━━━━━┓
-SBG=#FF1155
+SBG=#DD2266
 SFG=#000000
 # ╺╸╺╸╺╸╺╸╺╸
 SK0=#FF0044
@@ -85,36 +85,36 @@ SK9=#FF99DD
 
 # ▁▁▁SEED▁W
 # ━━━━━━━━━━┓
-WBG=#3311FF
+WBG=#3311CC
 WFG=#CCBBFF
 # ╺╸╺╸╺╸╺╸╺╸
 WK0=#000022
 WK1=#111144
 WK2=#222266
 WK3=#443399
-WK4=#6644CC
-WK5=#8855DD
-WK6=#9966EE
-WK7=#AA77EE
-WK8=#BB88FF
-WK9=#CC99FF
+WK4=#5544AA
+WK5=#6655BB
+WK6=#7766CC
+WK7=#8877DD
+WK8=#9988EE
+WK9=#AA99FF
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁E
 # ━━━━━━━━━━┓
-EBG=#11AA00
+EBG=#009911
 EFG=#000000
 # ╺╸╺╸╺╸╺╸╺╸
-EK0=#119900
-EK1=#22AA11
-EK2=#33BB22
-EK3=#44CC33
-EK4=#55DD44
-EK5=#66DD55
-EK6=#77EE66
-EK7=#88EE77
-EK8=#99FF88
-EK9=#AAFF99
+EK0=#002211
+EK1=#114422
+EK2=#226633
+EK3=#339944
+EK4=#44AA55
+EK5=#55BB66
+EK6=#66CC77
+EK7=#77DD88
+EK8=#88EE99
+EK9=#99FFAA
 # ━━━━━━━━━━┛
 
 # vi: ft=sh
