--- a/hexocd.env
+++ b/hexocd.env
@@ -3,8 +3,8 @@
 # ▁▁▁{F,B}G
 # ━━━━━━━━━━┓
 XFG=#AA99FF
-XBG=#0F122F
-XGG=#0E102A
+XBG=#221155
+XGG=#1F0F4C
 # ━━━━━━━━━━┛
 
 # ▁▁▁8▁4x▁32
@@ -30,19 +30,19 @@ CC3=#EE7722
 CX3=#DD5511
 CZ3=#DD3300
 # ╺╸╺╸╺╸╺╸╺╸
-CY4=#99DDFF
-C12=#66BBFF
-C04=#3399EE
-CC4=#1177EE
-CX4=#3311CC
-CZ4=#2211AA
+CY4=#66AAFF
+C12=#2299EE
+C04=#1177DD
+CC4=#2244CC
+CX4=#3311BB
+CZ4=#3300AA
 # ╺╸╺╸╺╸╺╸╺╸
-CY5=#9977FF
+CY5=#9988FF
 C13=#8866EE
-C05=#7755DD
-CC5=#6644CC
-CX5=#5533BB
-CZ5=#4422AA
+C05=#6644DD
+CC5=#5522CC
+CX5=#4422BB
+CZ5=#4411AA
 # ╺╸╺╸╺╸╺╸╺╸
 CY6=#88FFDD
 C14=#66EECC
@@ -51,59 +51,59 @@ CC6=#22CCAA
 CX6=#11BB99
 CZ6=#00AA88
 # ╺╸╺╸╺╸╺╸╺╸
-CY7=#7777FF
-C15=#6666DD
-C07=#5555BB
-CC7=#444499
-CX7=#333377
-CZ7=#111155
+CY7=#6655BB
+C15=#5544AA
+C07=#443399
+CC7=#332288
+CX7=#221177
+CZ7=#221166
 # ╺╸╺╸╺╸╺╸╺╸
-CY0=#555588
-C08=#444477
-C00=#333366
+CY0=#333388
+C08=#333377
+C00=#332266
 CC0=#222255
-CX0=#111144
-CZ0=#000033
+CX0=#221144
+CZ0=#111133
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁S
 # ━━━━━━━━━━┓
-SBG=#DD2266
-SFG=#000000
+SBG=#DD3366
+SFG=#331155
 # ╺╸╺╸╺╸╺╸╺╸
-SK0=#FF0044
-SK1=#FF1155
-SK2=#EE2266
-SK3=#EE3377
-SK4=#EE4488
-SK5=#FF5599
-SK6=#FF66AA
-SK7=#FF77BB
-SK8=#FF88CC
-SK9=#FF99DD
+SK0=#DD1144
+SK1=#DD2255
+SK2=#DD3366
+SK3=#EE4477
+SK4=#EE5588
+SK5=#EE6699
+SK6=#EE77AA
+SK7=#FF88BB
+SK8=#FF99CC
+SK9=#FFAADD
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁W
 # ━━━━━━━━━━┓
-WBG=#3311CC
-WFG=#CCBBFF
+WBG=#3311BB
+WFG=#2299EE
 # ╺╸╺╸╺╸╺╸╺╸
-WK0=#000022
+WK0=#110022
 WK1=#111144
-WK2=#222266
-WK3=#443399
-WK4=#5544AA
-WK5=#6655BB
-WK6=#7766CC
-WK7=#8877DD
-WK8=#9988EE
-WK9=#AA99FF
+WK2=#221166
+WK3=#332288
+WK4=#4433AA
+WK5=#5544BB
+WK6=#6655CC
+WK7=#7766DD
+WK8=#8877EE
+WK9=#9988FF
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁E
 # ━━━━━━━━━━┓
 EBG=#009911
-EFG=#000000
+EFG=#113344
 # ╺╸╺╸╺╸╺╸╺╸
 EK0=#002211
 EK1=#114422
