--- a/hexocd.env
+++ b/hexocd.env
@@ -99,6 +99,18 @@ WK7=#7766DD
 WK8=#8877EE
 WK9=#9988FF
 # ━━━━━━━━━━┛
+# --color-background-1200: 10, 0,  20;
+# --color-background-1100: 20, 10, 40;
+# --color-background-1000: 30, 20, 60;
+# --color-background-900:  40, 30, 80;
+# --color-background-800:  50, 40, 100;
+# --color-background-700:  60, 50, 120;
+# --color-background-600:  70, 60, 140;
+# --color-background-500:  80, 70, 160;
+# --color-background-400:  90, 80, 180;
+# --color-background-300: 100, 90, 200;
+# --color-background-200: 110,100, 220;
+# --color-background-100: 120,110, 240;
 
 # ▁▁▁SEED▁E
 # ━━━━━━━━━━┓
