--- a/hexocd.env
+++ b/hexocd.env
@@ -2,7 +2,8 @@
 
 # ▁▁▁{F,B}G
 # ━━━━━━━━━━┓
-XFG=#AA99FF
+# XFG=#AA99FF
+XFG=#44BBFF
 XBG=#221155
 XGG=#1F0F4C
 # ━━━━━━━━━━┛
@@ -16,11 +17,11 @@ CC1=#DD2266
 CX1=#EE1155
 CZ1=#FF0044
 # ╺╸╺╸╺╸╺╸╺╸
-CY2=#99EEBB
-C10=#77DD99
-C02=#55CC77
-CC2=#33BB55
-CX2=#11AA33
+CY2=#99EE66
+C10=#77DD55
+C02=#55CC44
+CC2=#33BB33
+CX2=#11AA22
 CZ2=#009911
 # ╺╸╺╸╺╸╺╸╺╸
 CY3=#FFDD88
@@ -30,7 +31,7 @@ CC3=#EE7722
 CX3=#DD5511
 CZ3=#DD3300
 # ╺╸╺╸╺╸╺╸╺╸
-CY4=#66AAFF
+CY4=#44BBFF
 C12=#2299EE
 C04=#1177DD
 CC4=#2244CC
