--- a/hexocd.env
+++ b/hexocd.env
@@ -2,7 +2,6 @@
 
 # ▁▁▁{F,B}G
 # ━━━━━━━━━━┓
-# XFG=#AA99FF
 XFG=#44BBFF
 XBG=#221155
 XGG=#1F0F4C
@@ -52,18 +51,18 @@ CC6=#22CCAA
 CX6=#11BB99
 CZ6=#00AA88
 # ╺╸╺╸╺╸╺╸╺╸
-CY7=#6655BB
-C15=#5544AA
-C07=#443399
-CC7=#332288
-CX7=#221177
-CZ7=#221166
+CY7=#BBCCFF
+C15=#AABBFF
+C07=#9999EE
+CC7=#8888EE
+CX7=#8877DD
+CZ7=#7766CC
 # ╺╸╺╸╺╸╺╸╺╸
-CY0=#333388
-C08=#333377
-C00=#332266
-CC0=#222255
-CX0=#221144
+CY0=#6655BB
+C08=#5544AA
+C00=#443388
+CC0=#332266
+CX0=#221155
 CZ0=#111133
 # ━━━━━━━━━━┛
 
@@ -89,17 +88,16 @@ SK9=#FFAADD
 WBG=#3311BB
 WFG=#2299EE
 # ╺╸╺╸╺╸╺╸╺╸
-WK0=#110022
-WK1=#111144
-WK2=#221166
-WK3=#332288
-WK4=#4433AA
-WK5=#5544BB
-WK6=#6655CC
-WK7=#7766DD
-WK8=#8877EE
-WK9=#9988FF
-# ━━━━━━━━━━┛
+WK0=#111133
+WK1=#221155
+WK2=#332266
+WK3=#443388
+WK4=#5544AA
+WK5=#6655BB
+WK6=#7766CC
+WK7=#8877DD
+WK8=#9999EE
+WK9=#AABBFF
 
 # ▁▁▁SEED▁E
 # ━━━━━━━━━━┓
