--- a/hexocd.env
+++ b/hexocd.env
@@ -71,16 +71,16 @@ CZ0=#111133
 SBG=#DD3366
 SFG=#331155
 # ╺╸╺╸╺╸╺╸╺╸
-SK0=#DD1144
-SK1=#DD2255
-SK2=#DD3366
-SK3=#EE4477
-SK4=#EE5588
-SK5=#EE6699
-SK6=#EE77AA
-SK7=#FF88BB
-SK8=#FF99CC
-SK9=#FFAADD
+SK0=#220044
+SK1=#441155
+SK2=#662266
+SK3=#883377
+SK4=#994488
+SK5=#AA5599
+SK6=#BB66AA
+SK7=#CC77BB
+SK8=#DD88CC
+SK9=#EE99DD
 # ━━━━━━━━━━┛
 
 # ▁▁▁SEED▁W
@@ -88,7 +88,7 @@ SK9=#FFAADD
 WBG=#3311BB
 WFG=#2299EE
 # ╺╸╺╸╺╸╺╸╺╸
-WK0=#111144
+WK0=#200244
 WK1=#221155
 WK2=#332266
 WK3=#443388
@@ -104,15 +104,15 @@ WK9=#AABBFF
 EBG=#009911
 EFG=#113344
 # ╺╸╺╸╺╸╺╸╺╸
-EK0=#002211
-EK1=#114422
-EK2=#226633
-EK3=#339944
-EK4=#44AA55
-EK5=#55BB66
-EK6=#66CC77
-EK7=#77DD88
-EK8=#88EE99
+EK0=#003322
+EK1=#114433
+EK2=#226644
+EK3=#339955
+EK4=#44AA66
+EK5=#55BB77
+EK6=#66CC88
+EK7=#77DD99
+EK8=#88EEAA
 EK9=#99FFAA
 # ━━━━━━━━━━┛
 
