dynamic readme with jq and markup.json

--- a/hexocd.env
+++ b/hexocd.env
@@ -1,4 +1,6 @@
-#  shellcheck disable=SC2034 # Will be sourced by confsubst
+# shellcheck disable=SC2034
+
+set -a
 
 # ▁▁▁{F,B}G
 # ━━━━━━━━━━┓
@@ -23,12 +25,12 @@ CC2=#33BB33
 CX2=#11AA22
 CZ2=#009911
 # ╺╸╺╸╺╸╺╸╺╸
-CY3=#FFDD88
-C11=#FFBB66
-C03=#EE9944
-CC3=#EE7722
-CX3=#DD5511
-CZ3=#DD3300
+CY3=#FFCC55
+C11=#EEBB44
+C03=#DDAA33
+CC3=#CC9922
+CX3=#BB8811
+CZ3=#AA7700
 # ╺╸╺╸╺╸╺╸╺╸
 CY4=#44BBFF
 C12=#2299EE
@@ -115,5 +117,29 @@ EK7=#77DD99
 EK8=#88EEAA
 EK9=#99FFAA
 # ━━━━━━━━━━┛
+
+ZK0=#BB44AA
+ZK1=#BB55BB
+ZK2=#CC66CC
+ZK3=#CC77DD
+ZK4=#DD88DD
+ZK5=#DD99EE
+ZK6=#EEAAEE
+ZK7=#EEBBFF
+ZK8=#FFCCFF
+ZK9=#FFDDFF
+
+PK0=#FF4488
+PK1=#EE4499
+PK2=#DD44AA
+PK3=#CC44BB
+PK4=#BB44CC
+PK5=#AA44DD
+PK6=#9944EE
+PK7=#8844FF
+PK8=#7755FF
+PK9=#6655FF
+
+set +a
 
 # vi: ft=sh
