--- a/hexocd.env
+++ b/hexocd.env
@@ -1,108 +1,95 @@
 # shellcheck disable=SC2034
 
 set -a
-
-# ▁▁▁{F,B}G
-# ━━━━━━━━━━┓
 XFG=#44BBFF
-XBG=#221155
-XGG=#1F0F4C
-# ━━━━━━━━━━┛
-
-# ▁▁▁8▁4x▁32
-# ━━━━━━━━━━┓
-CY1=#AA5599
-C09=#BB4488
-C01=#CC3377
-CC1=#DD2266
-CX1=#EE1155
-CZ1=#FF0044
+XBG=#221133
+XGG=#220044
+# ━━━━━━━━━━
+CY1=#FF5599
+C09=#FF4488
+C01=#EE3377
+CC1=#EE2266
+CX1=#DD1155
+CZ1=#DD0044
 # ╺╸╺╸╺╸╺╸╺╸
-CY2=#99EE66
-C10=#77DD55
-C02=#55CC44
-CC2=#33BB33
-CX2=#11AA22
-CZ2=#009911
+CY2=#55EE77
+C10=#44DD66
+C02=#33CC55
+CC2=#22BB44
+CX2=#11AA33
+CZ2=#009922
 # ╺╸╺╸╺╸╺╸╺╸
-CY3=#FFCC55
-C11=#EEBB44
-C03=#DDAA33
-CC3=#CC9922
-CX3=#BB8811
-CZ3=#AA7700
+CY3=#CCEE44
+C11=#BBDD33
+C03=#AACC22
+CC3=#99BB11
+CX3=#88AA00
+CZ3=#779900
 # ╺╸╺╸╺╸╺╸╺╸
-CY4=#44BBFF
-C12=#2299EE
-C04=#1177DD
-CC4=#2244CC
-CX4=#3311BB
-CZ4=#3300AA
+CY4=#55BBEE
+C12=#2288DD
+C04=#1144CC
+CC4=#3322BB
+CX4=#3311AA
+CZ4=#220099
 # ╺╸╺╸╺╸╺╸╺╸
-CY5=#9988FF
-C13=#8866EE
-C05=#6644DD
-CC5=#5522CC
-CX5=#4422BB
-CZ5=#4411AA
+CY5=#BB55EE
+C13=#9944DD
+C05=#7733CC
+CC5=#6622BB
+CX5=#5511AA
+CZ5=#440099
 # ╺╸╺╸╺╸╺╸╺╸
-CY6=#88FFDD
-C14=#66EECC
-C06=#44DDBB
+CY6=#55FFDD
+C14=#44EECC
+C06=#33DDBB
 CC6=#22CCAA
 CX6=#11BB99
 CZ6=#00AA88
 # ╺╸╺╸╺╸╺╸╺╸
-CY7=#BBCCFF
-C15=#AABBFF
-C07=#9999EE
-CC7=#8888EE
+CY7=#CCBBEE
+C15=#BBAAEE
+C07=#AA99EE
+CC7=#9988DD
 CX7=#8877DD
-CZ7=#7766CC
+CZ7=#7766DD
 # ╺╸╺╸╺╸╺╸╺╸
-CY0=#6655BB
-C08=#5544AA
-C00=#443388
-CC0=#332266
-CX0=#221155
-CZ0=#111133
-# ━━━━━━━━━━┛
-
-# ▁▁▁SEED▁S
-# ━━━━━━━━━━┓
+CY0=#665588
+C08=#554477
+C00=#443366
+CC0=#332255
+CX0=#221144
+CZ0=#110033
+# ━━━━━━━━━━
 SBG=#DD3366
 SFG=#331155
 # ╺╸╺╸╺╸╺╸╺╸
-SK0=#220044
-SK1=#441155
-SK2=#662266
-SK3=#883377
-SK4=#994488
-SK5=#AA5599
-SK6=#BB66AA
-SK7=#CC77BB
-SK8=#DD88CC
-SK9=#EE99DD
-# ━━━━━━━━━━┛
-
-# ▁▁▁SEED▁W
-# ━━━━━━━━━━┓
-WBG=#3311BB
-WFG=#2299EE
+SK0=#11001F
+SK0=#220033
+SK1=#331144
+SK2=#441155
+SK3=#442266
+SK4=#663388
+SK5=#884499
+SK6=#BB55AA
+SK7=#CC66BB
+SK8=#DD77CC
+SK9=#EE88DD
+# ━━━━━━━━━━
+WBG=#3311AA
+WFG=#2288DD
 # ╺╸╺╸╺╸╺╸╺╸
-WK0=#200244
-WK1=#221155
-WK2=#332266
-WK3=#443388
-WK4=#5544AA
-WK5=#6655BB
-WK6=#7766CC
-WK7=#8877DD
-WK8=#9999EE
-WK9=#AABBFF
-
-# ▁▁▁SEED▁E
-# ━━━━━━━━━━┓
+WK0=#0A001F
+WK1=#220044
+WK2=#331166
+WK3=#442288
+WK4=#5533AA
+WK5=#6644BB
+WK6=#7755CC
+WK7=#8866DD
+WK8=#9977EE
+WK9=#AA88FF
+# ━━━━━━━━━━
 EBG=#009911
 EFG=#113344
 # ╺╸╺╸╺╸╺╸╺╸
@@ -116,8 +103,7 @@ EK6=#66CC88
 EK7=#77DD99
 EK8=#88EEAA
 EK9=#99FFAA
-# ━━━━━━━━━━┛
-
+# ━━━━━━━━━━
 ZK0=#BB44AA
 ZK1=#BB55BB
 ZK2=#CC66CC
@@ -128,7 +114,7 @@ ZK6=#EEAAEE
 ZK7=#EEBBFF
 ZK8=#FFCCFF
 ZK9=#FFDDFF
-
+# ━━━━━━━━━━
 PK0=#FF4488
 PK1=#EE4499
 PK2=#DD44AA
@@ -139,7 +125,6 @@ PK6=#9944EE
 PK7=#8844FF
 PK8=#7755FF
 PK9=#6655FF
-
 set +a
 
 # vi: ft=sh
