--- a/hexocd.env
+++ b/hexocd.env
@@ -2,8 +2,10 @@
 
 set -a
 XFG=#44BBFF
-XBG=#221133
+XBG=#220033
 XGG=#220044
+CWW=#FFFFFF
+CBB=#000000
 # ━━━━━━━━━━
 CY1=#FF5599
 C09=#FF4488
@@ -26,19 +28,19 @@ CC3=#99BB11
 CX3=#88AA00
 CZ3=#779900
 # ╺╸╺╸╺╸╺╸╺╸
-CY4=#55BBEE
-C12=#2288DD
-C04=#1144CC
-CC4=#3322BB
-CX4=#3311AA
-CZ4=#220099
+CY4=#44DDFF
+C12=#44BBEE
+C04=#4433DD
+CC4=#4422CC
+CX4=#4411BB
+CZ4=#4400AA
 # ╺╸╺╸╺╸╺╸╺╸
-CY5=#BB55EE
-C13=#9944DD
-C05=#7733CC
+CY5=#CC55BB
+C13=#AA44BB
+C05=#7733BB
 CC5=#6622BB
 CX5=#5511AA
-CZ5=#440099
+CZ5=#5500AA
 # ╺╸╺╸╺╸╺╸╺╸
 CY6=#55FFDD
 C14=#44EECC
@@ -54,44 +56,43 @@ CC7=#9988DD
 CX7=#8877DD
 CZ7=#7766DD
 # ╺╸╺╸╺╸╺╸╺╸
-CY0=#665588
-C08=#554477
-C00=#443366
-CC0=#332255
-CX0=#221144
-CZ0=#110033
+CY0=#440088
+C08=#440077
+C00=#330066
+CC0=#330055
+CX0=#220044
+CZ0=#220033
 # ━━━━━━━━━━
-SBG=#DD3366
-SFG=#331155
+SBG=#DD1166
+SFG=#330066
 # ╺╸╺╸╺╸╺╸╺╸
-SK0=#11001F
-SK0=#220033
-SK1=#331144
-SK2=#441155
-SK3=#442266
-SK4=#663388
-SK5=#884499
-SK6=#BB55AA
-SK7=#CC66BB
-SK8=#DD77CC
-SK9=#EE88DD
+SK0=#1A002A
+SK1=#220033
+SK2=#331144
+SK3=#441A55
+SK4=#552266
+SK5=#662A77
+SK6=#773388
+SK7=#884499
+SK8=#AA55BB
+SK9=#BB66CC
 # ━━━━━━━━━━
-WBG=#3311AA
-WFG=#2288DD
+WBG=#4411BB
+WFG=#44DDFF
 # ╺╸╺╸╺╸╺╸╺╸
-WK0=#0A001F
+WK0=#110022
 WK1=#220044
 WK2=#331166
-WK3=#442288
-WK4=#5533AA
-WK5=#6644BB
-WK6=#7755CC
-WK7=#8866DD
-WK8=#9977EE
-WK9=#AA88FF
+WK3=#441A88
+WK4=#5522AA
+WK5=#6633BB
+WK6=#7744CC
+WK7=#8855DD
+WK8=#9955EE
+WK9=#AA55FF
 # ━━━━━━━━━━
-EBG=#009911
-EFG=#113344
+EBG=#229911
+EFG=#002211
 # ╺╸╺╸╺╸╺╸╺╸
 EK0=#003322
 EK1=#114433
