--- a/hexocd.env
+++ b/hexocd.env
@@ -1,40 +1,99 @@
 # shellcheck disable=SC2034
 
 set -a
-XFG=#44BBFF
-XBG=#220033
-XGG=#220044
-CWW=#FFFFFF
-CBB=#000000
-# ━━━━━━━━━━
+# ━━━━━━━━━┓
+SBG=#DD1166
+SFG=#330066
+# ╺╸╺╸╺╸╺╸╺┫
+SK0=#1A002A
+SK1=#220033
+SK2=#331144
+SK3=#441A55
+SK4=#552266
+SK5=#662A77
+SK6=#773388
+SK7=#884499
+SK8=#AA55BB
+SK9=#BB66CC
+# ━━━━━━━━━┫
+WBG=#4411BB
+WFG=#44DDFF
+# ╺╸╺╸╺╸╺╸╺┫
+WK0=#110022
+WK1=#220044
+WK2=#331166
+WK3=#441A88
+WK4=#5522AA
+WK5=#6633BB
+WK6=#7744CC
+WK7=#8855DD
+WK8=#9955EE
+WK9=#AA55FF
+# ━━━━━━━━━┫
+EBG=#229911
+EFG=#002211
+# ╺╸╺╸╺╸╺╸╺┫
+EK0=#003322
+EK1=#114433
+EK2=#226644
+EK3=#339955
+EK4=#44AA66
+EK5=#55BB77
+EK6=#66CC88
+EK7=#77DD99
+EK8=#88EEAA
+EK9=#99FFAA
+# ━━━━━━━━━┫
+ZK0=#BB44AA
+ZK1=#BB55BB
+ZK2=#CC66CC
+ZK3=#CC77DD
+ZK4=#DD88DD
+ZK5=#DD99EE
+ZK6=#EEAAEE
+ZK7=#EEBBFF
+ZK8=#FFCCFF
+ZK9=#FFDDFF
+# ━━━━━━━━━┫
+PK0=#FF4488
+PK1=#EE4499
+PK2=#DD44AA
+PK3=#CC44BB
+PK4=#BB44CC
+PK5=#AA44DD
+PK6=#9944EE
+PK7=#8844FF
+PK8=#7755FF
+PK9=#6655FF
+# ━━━━━━━━━┫
 CY1=#FF5599
 C09=#FF4488
 C01=#EE3377
 CC1=#EE2266
 CX1=#DD1155
 CZ1=#DD0044
-# ╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺┫
 CY2=#55EE77
 C10=#44DD66
 C02=#33CC55
 CC2=#22BB44
 CX2=#11AA33
 CZ2=#009922
-# ╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺┫
 CY3=#CCEE44
 C11=#BBDD33
 C03=#AACC22
 CC3=#99BB11
 CX3=#88AA00
 CZ3=#779900
-# ╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺┫
 CY4=#44DDFF
 C12=#44BBEE
 C04=#4433DD
 CC4=#4422CC
 CX4=#4411BB
 CZ4=#4400AA
-# ╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺┫
 CY5=#CC55BB
 C13=#AA44BB
 C05=#7733BB
@@ -48,84 +107,27 @@ C06=#33DDBB
 CC6=#22CCAA
 CX6=#11BB99
 CZ6=#00AA88
-# ╺╸╺╸╺╸╺╸╺╸
+# ╺╸╺╸╺╸╺╸╺┫
 CY7=#CCBBEE
 C15=#BBAAEE
 C07=#AA99EE
 CC7=#9988DD
 CX7=#8877DD
 CZ7=#7766DD
-# ╺╸╺╸╺╸╺╸╺╸
-CY0=#440088
-C08=#440077
-C00=#330066
-CC0=#330055
-CX0=#220044
-CZ0=#220033
-# ━━━━━━━━━━
-SBG=#DD1166
-SFG=#330066
-# ╺╸╺╸╺╸╺╸╺╸
-SK0=#1A002A
-SK1=#220033
-SK2=#331144
-SK3=#441A55
-SK4=#552266
-SK5=#662A77
-SK6=#773388
-SK7=#884499
-SK8=#AA55BB
-SK9=#BB66CC
-# ━━━━━━━━━━
-WBG=#4411BB
-WFG=#44DDFF
-# ╺╸╺╸╺╸╺╸╺╸
-WK0=#110022
-WK1=#220044
-WK2=#331166
-WK3=#441A88
-WK4=#5522AA
-WK5=#6633BB
-WK6=#7744CC
-WK7=#8855DD
-WK8=#9955EE
-WK9=#AA55FF
-# ━━━━━━━━━━
-EBG=#229911
-EFG=#002211
-# ╺╸╺╸╺╸╺╸╺╸
-EK0=#003322
-EK1=#114433
-EK2=#226644
-EK3=#339955
-EK4=#44AA66
-EK5=#55BB77
-EK6=#66CC88
-EK7=#77DD99
-EK8=#88EEAA
-EK9=#99FFAA
-# ━━━━━━━━━━
-ZK0=#BB44AA
-ZK1=#BB55BB
-ZK2=#CC66CC
-ZK3=#CC77DD
-ZK4=#DD88DD
-ZK5=#DD99EE
-ZK6=#EEAAEE
-ZK7=#EEBBFF
-ZK8=#FFCCFF
-ZK9=#FFDDFF
-# ━━━━━━━━━━
-PK0=#FF4488
-PK1=#EE4499
-PK2=#DD44AA
-PK3=#CC44BB
-PK4=#BB44CC
-PK5=#AA44DD
-PK6=#9944EE
-PK7=#8844FF
-PK8=#7755FF
-PK9=#6655FF
+# ╺╸╺╸╺╸╺╸╺┫
+CY0=$WK3
+C08=$SK3
+C00=$WK2
+CC0=$SK2
+CX0=$WK1
+CZ0=$SK1
+# ━━━━━━━━━┫
+XFG=$PK9
+XBG=$SK1
+XGG=$WK1
+CWW=$CY7
+CBB=$SK0
+# ━━━━━━━━━┛
 set +a
 
 # vi: ft=sh
