--- a/templates/zed-vivid-indigo.jsonc
+++ b/templates/zed-vivid-indigo.jsonc
@@ -8,7 +8,7 @@
       "name": "vivid-Indigo",
       "appearance": "dark",
       "style": {
-        "background": "$SK1",
+        "background": "$SK0",
         "background.appearance": "blurred",
         "border": "#f0000000",
         "border.disabled": "#f0000000",
@@ -22,122 +22,122 @@
         "created": "$C02",
         "created.background": "$EK2",
         "created.border": "#f0000000",
-        "deleted.background": "$SK2",
+        "deleted.background": "$SK1",
         "deleted.border": "#00000000",
         "deleted": "$C01",
-        "drop_target.background": "#038994f0",
-        "editor.active_line.background": "$CX5",
-        "editor.active_line_number": "$XFG",
-        "editor.active_wrap_guide": "#c8ccd41a",
-        "editor.background": "$XBG",
-        "editor.document_highlight.read_background": "$SK8",
+        "drop_target.background": "$PK4",
+        "editor.active_line.background": "$WK1",
+        "editor.active_line_number": "$CY4",
+        "editor.active_wrap_guide": "$WK3",
+        "editor.background": "$SK0",
+        "editor.document_highlight.read_background": "$WK2",
         "editor.document_highlight.write_background": "$SK1",
-        "editor.foreground": "#BB88FF",
-        "editor.gutter.background": "#11002233",
-        "editor.highlighted_line.background": "#0bf036ff",
-        "editor.invisible": "#AAFF00",
-        "editor.line_number": "#5522CC",
-        "editor.subheader.background": "#331155",
-        "editor.wrap_guide": "#f82cd4ff",
-        "element.active": "#f8419DFF",
-        "element.background": "#110033FF",
-        "element.disabled": "#88aa00FF",
-        "element.hover": "#4411EEFF",
-        "element.selected": "#11AA22FF",
-        "elevated_surface.background": "#200044FB",
-        "error.background": "#441155FF",
-        "error.border": "#00000000",
-        "error": "#FF3399FF",
-        "ghost_element.active": "#5500AADD",
-        "ghost_element.background": "#110022AA",
-        "ghost_element.disabled": "#BB8811FF",
-        "ghost_element.hover": "#5500CCAA",
-        "ghost_element.selected": "#080011",
-        "hidden": "#EE2266EE",
-        "hidden.background": "#00000000",
-        "hidden.border": "#00000000",
-        "hint": "#44EE88",
-        "hint.background": "#18243dff",
-        "hint.border": "#00000000",
-        "icon.accent": "#fE00FFFF",
-        "icon.disabled": "#555a63ff",
-        "icon": "#f121F1",
-        "icon.muted": "#B3B3B3",
-        "icon.placeholder": "#B3B3B3",
-        "ignored": "#B3B3B3",
-        "ignored.background": "#171717",
-        "ignored.border": "#00000000",
-        "info": "#11AA22FF",
-        "info.background": "#334422FF",
-        "info.border": "#00000000",
-        "link_text.hover": "#F1F1F1",
-        "modified": "#79b8ffff",
-        "modified.background": "#41321dff",
-        "modified.border": "#00000000",
-        "pane.focused_border": "#0000f000",
-        "panel.background": "$SK1",
-        "panel.focused_border": "#00f00000",
-        "predictive": "#9988FF",
-        "predictive.background": "#222e1dff",
-        "predictive.border": "#f0000000",
-        "renamed": "#74ade8ff",
-        "renamed.background": "#18243dff",
-        "renamed.border": "#00000000",
-        "scrollbar.thumb.background": "#4411AA99",
-        "scrollbar.thumb.border": "#00000000",
-        "scrollbar.thumb.hover_background": "#fa037df4",
+        "editor.foreground": "$XFG",
+        "editor.gutter.background": "$XBG",
+        "editor.highlighted_line.background": "$SK1",
+        "editor.invisible": "$PK9",
+        "editor.line_number": "$CX5",
+        "editor.subheader.background": "$WK2",
+        "editor.wrap_guide": "$PK9",
+        "element.active": "$PK7",
+        "element.background": "$WK1",
+        "element.disabled": "$WK4",
+        "element.hover": "$CX4",
+        "element.selected": "$EBG",
+        "elevated_surface.background": "$WK1",
+        "error.background": "$WK0",
+        "error.border": "$SK0",
+        "error": "$EBG",
+        "ghost_element.active": "$ZK0",
+        "ghost_element.background": "$WK0",
+        "ghost_element.disabled": "$SFG",
+        "ghost_element.hover": "$WBG",
+        "ghost_element.selected": "$EBG",
+        "hidden": "$SBG",
+        "hidden.background": "$CBB",
+        "hidden.border": "$CBB",
+        "hint": "$CX2",
+        "hint.background": "$CZ4",
+        "hint.border": "$SK0",
+        "icon.accent": "$PK0",
+        "icon.disabled": "$CC7",
+        "icon": "$CX5",
+        "icon.muted": "$WK5",
+        "icon.placeholder": "$WK6",
+        "ignored": "$WK7",
+        "ignored.background": "$SK4",
+        "ignored.border": "$SK1",
+        "info": "$EK2",
+        "info.background": "$EK3",
+        "info.border": "$CBB",
+        "link_text.hover": "$XFG",
+        "modified": "$CC3",
+        "modified.background": "$CC3",
+        "modified.border": "$CBB",
+        "pane.focused_border": "$CC4",
+        "panel.background": "$SK0",
+        "panel.focused_border": "$CC2",
+        "predictive": "$CC5",
+        "predictive.background": "$WK0",
+        "predictive.border": "$EK1",
+        "renamed": "$CX3",
+        "renamed.background": "$C03",
+        "renamed.border": "$CBB",
+        "scrollbar.thumb.background": "$C04",
+        "scrollbar.thumb.border": "$CBB",
+        "scrollbar.thumb.hover_background": "$C01",
         "scrollbar.track.background": "$XBG",
-        "scrollbar.track.border": "#00000000",
-        "search.match_background": "#002211",
+        "scrollbar.track.border": "$CBB",
+        "search.match_background": "$WK1",
         "status_bar.background": "$SK0",
-        "success": "#01c181ff",
-        "success.background": "#009911EE",
-        "success.border": "#00000000",
-        "surface.background": "#ee9900",
-        "tab.active_background": "$SK1",
+        "success": "$CC2",
+        "success.background": "$CX2",
+        "success.border": "$CZ2",
+        "surface.background": "$SK0",
+        "tab.active_background": "$WK1",
         "tab_bar.background": "$SK0",
-        "tab.inactive_background": "$SK2",
+        "tab.inactive_background": "$SK1",
         "terminal.ansi.black": "#SK0",
-        "terminal.ansi.blue": "#5C78FF",
-        "terminal.ansi.bright_black": "#221155",
-        "terminal.ansi.bright_blue": "#2B4FFF",
-        "terminal.ansi.bright_cyan": "#5AC8FF",
-        "terminal.ansi.bright_green": "#905AFF",
-        "terminal.ansi.bright_magenta": "#5EA2FF",
-        "terminal.ansi.bright_red": "#ba5aff",
-        "terminal.ansi.bright_white": "#FFFFFF",
-        "terminal.ansi.bright_yellow": "#3D2AFF",
-        "terminal.ansi.cyan": "#28B9FF",
-        "terminal.ansi.dim_black": "#F1F1F1",
-        "terminal.ansi.dim_blue": "#bed5f4ff",
-        "terminal.ansi.dim_cyan": "#b9d9dfff",
-        "terminal.ansi.dim_green": "#905AFF",
-        "terminal.ansi.dim_magenta": "#5EA2FF",
-        "terminal.ansi.dim_red": "#ba5aff",
-        "terminal.ansi.dim_white": "#ffff55ff",
-        "terminal.ansi.dim_yellow": "#3D2AFF",
-        "terminal.ansi.green": "#7129FF",
-        "terminal.ansi.magenta": "#2883FF",
-        "terminal.ansi.red": "#5C78FF",
-        "terminal.ansi.white": "#F1F1F1",
-        "terminal.ansi.yellow": "#685AFF",
-        "terminal.background": "$WK1",
-        "terminal.bright_foreground": "#FF44FF",
-        "terminal.dim_foreground": "#9988FF",
-        "terminal.foreground": "#44BBFF",
+        "terminal.ansi.blue": "$C04",
+        "terminal.ansi.bright_black": "$C00",
+        "terminal.ansi.bright_blue": "$CY4",
+        "terminal.ansi.bright_cyan": "$CY6",
+        "terminal.ansi.bright_green": "$CY2",
+        "terminal.ansi.bright_magenta": "$CY5",
+        "terminal.ansi.bright_red": "$CY1",
+        "terminal.ansi.bright_white": "$CY7",
+        "terminal.ansi.bright_yellow": "$CY3",
+        "terminal.ansi.cyan": "$C06",
+        "terminal.ansi.dim_black": "$CX0",
+        "terminal.ansi.dim_blue": "$CX4",
+        "terminal.ansi.dim_cyan": "$CX6",
+        "terminal.ansi.dim_green": "$CX2",
+        "terminal.ansi.dim_magenta": "$CX5",
+        "terminal.ansi.dim_red": "$CX1",
+        "terminal.ansi.dim_white": "$CX7",
+        "terminal.ansi.dim_yellow": "$CX3",
+        "terminal.ansi.green": "$C02",
+        "terminal.ansi.magenta": "$C05",
+        "terminal.ansi.red": "$C01",
+        "terminal.ansi.white": "$C06",
+        "terminal.ansi.yellow": "$C03",
+        "terminal.background": "$SK1",
+        "terminal.bright_foreground": "$PK9",
+        "terminal.dim_foreground": "$WK4",
+        "terminal.foreground": "$XFG",
         "text.accent": "$CY5",
-        "text.disabled": "#8866EE",
+        "text.disabled": "$WK5",
         "text": "$CY4",
-        "text.muted": "#2299EE",
-        "text.placeholder": "#EEBB44",
-        "title_bar.background": "$SK2",
-        "toolbar.background": "#22003388",
-        "unreachable": "#00FF99",
-        "unreachable.background": "#AAEE99",
-        "unreachable.border": "#00000000",
-        "warning": "#55FFBB",
-        "warning.background": "#AA7700",
-        "warning.border": "#00000000",
+        "text.muted": "$SK4",
+        "text.placeholder": "$SK5",
+        "title_bar.background": "$SK1",
+        "toolbar.background": "$SK0",
+        "unreachable": "$SK3",
+        "unreachable.background": "$SK1",
+        "unreachable.border": "$SK4",
+        "warning": "$EK4",
+        "warning.background": "$EK3",
+        "warning.border": "$EK5",
         "players": [
           {
             "cursor": "#74ade8ff",
@@ -381,4 +381,3 @@
     }
   ]
 }
-
